--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
         </a>
+                <!-- cod para el menu hamburguesa -->
+
         <!-- cod para el menu hamburguesa -->
         <div class="menu-toggle" id="menu-toggle">
             <span></span>
