--- a/promociones.html
+++ b/promociones.html
@@ -12,7 +12,7 @@
 <body>
 
     <script src="./js/script.js"></script>
-    <header class="encabezado">
+    <header class="header">
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
         </a>
