--- a/carta.html
+++ b/carta.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header class="encabezado">
+    <header class="header">
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
         </a>
