--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
             <ul class="menu-derecha">
                 <li><a href="reservar.html" class="reserva">RESERVA ONLINE</a></li>
-                <li><a href="ordenar.html" class="ordenar">ORDENA AQUÍ</a></li>
+                <li><a href="ordenar.html" class="ordenar">MI ORDEN</a></li>
             </ul>
         </nav>
     </header>
