--- a/nosotros.html
+++ b/nosotros.html
@@ -31,7 +31,7 @@
             </ul>
             <ul class="menu-derecha">
                 <li><button class="reserva">RESERVA ONLINE</button></li>
-                <li><button class="ordenar">ORDENA AQUÍ</button></li>
+                <li><button class="ordenar">MI ORDEN</button></li>
             </ul>
         </nav>
     </header>
