--- a/carta.html
+++ b/carta.html
@@ -40,12 +40,12 @@
     <section class="carta-section">
         <div class="carta-header">
             <h2>Nuestra Carta</h2>
-            <a href="CARTA DELIVERY LAS CASCADAS-1.pdf" target="_blank" class="ver-mas"
+            <a href="CARTA CASCADAS DE VILLA 2025.pdf" target="_blank" class="ver-mas"
                 title="Ver en nueva pestaña">➤</a>
         </div>
 
         <div class="pdf-container">
-            <iframe src="CARTA DELIVERY LAS CASCADAS-1.pdf" type="application/pdf" class="pdf-viewer"
+            <iframe src="CARTA CASCADAS DE VILLA 2025.pdf" type="application/pdf" class="pdf-viewer"
                 title="Carta del Restaurante">
             </iframe>
         </div>
