cambio en nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
 
     <!-- Sección de Bienvenida con imagen de fondo -->
     <section class="section-imagen">
-        <div class="opacidad"><!-- NUEVO: Capa de opacidad -->
+        <div class="opacidad">
             <div class="section-text">
                 <h1>Las Cascadas de Villa</h1>
                 <p>-Tradición, sabor y pasión por la buena comida-</p>
