--- a/carta.html
+++ b/carta.html
@@ -72,9 +72,9 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-tiktok"></i>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
@@ -108,8 +108,6 @@
                 <ul>
                     <li>Términos y condiciones</li>
                     <li>Políticas de privacidad</li>
-                    <li>Reserva online</li>
-                    <li>Ordena aquí</li>
                 </ul>
             </div>
         </div>
