--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     </section>
 
-    <section class="bienvenida">
+    <section class="bienvenida" id="bienvenidas">
         <div class="bienvenida-contenedor">
             <div class="bienvenida-texto izquierda">
                 <h2>BIENVENIDOS A <br><span>“LAS CASCADAS DE VILLA”</span></h2>
@@ -104,6 +104,8 @@
     </section>
 
 
+
+
     <footer>
         <div class="footer-top">
             <div class="left-top">
@@ -112,15 +114,15 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-tiktok"></i>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <div class="footer-column">
+            <div class="footer-column" href="bienvenidas">
                 <h4>NOSOTROS</h4>
                 <ul>
                     <li>Visión</li>
@@ -148,8 +150,6 @@
                 <ul>
                     <li>Términos y condiciones</li>
                     <li>Políticas de privacidad</li>
-                    <li>Reserva online</li>
-                    <li>Ordena aquí</li>
                 </ul>
             </div>
         </div>
