sistema de añadir productos , almacenar productos y sistema de carrito inicial

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
             </ul>
             <ul class="menu-derecha">
                 <li><a href="reservar.html" class="reserva">RESERVA ONLINE</a></li>
-                <li><a href="ordenar.html" class="ordenar">MI ORDEN</a></li>
+                <li>
+                    <a href="ordenar.html" class="nav-link">
+                        <button class="ordenar">MI ORDEN</button>
+                        <span id="cuenta-carrito">0</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -114,9 +119,12 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
-                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
-                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i
+                            class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram"
+                            style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"
+                            style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
