--- a/ordenar.html
+++ b/ordenar.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Las Cascadas de Villa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PROMOCIONES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/carta.css">
+    <link rel="stylesheet" href="./css/promociones.css">
 </head>
 
 <body>
 
+    <script src="./js/productos.js"></script>
     <header class="header">
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
@@ -30,31 +31,15 @@
             </ul>
             <ul class="menu-derecha">
                 <li><button class="reserva">RESERVA ONLINE</button></li>
-                <li>
-                    <a href="ordenar.html" class="nav-link">
-                        <button class="ordenar">MI ORDEN</button>
-                        <span id="cuenta-carrito">0</span>
-                    </a>
-                </li>
+                <li><button class="ordenar">MI ORDEN</button></li>
             </ul>
         </nav>
     </header>
 
 
 
-    <section class="carta-section">
-        <div class="carta-header">
-            <h2>Nuestra Carta</h2>
-            <a href="CARTA CASCADAS DE VILLA 2025.pdf" target="_blank" class="ver-mas"
-                title="Ver en nueva pestaña">➤</a>
-        </div>
 
-        <div class="pdf-container">
-            <iframe src="CARTA CASCADAS DE VILLA 2025.pdf" type="application/pdf" class="pdf-viewer"
-                title="Carta del Restaurante">
-            </iframe>
-        </div>
-    </section>
+
 
     <footer>
         <div class="footer-top">
@@ -64,12 +49,9 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i
-                            class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
-                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram"
-                            style="color: #ffffff;"></i></a>
-                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"
-                            style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
@@ -111,9 +93,6 @@
             ©Las Cascadas de Villa. Todos los derechos reservados 2025
         </div>
     </footer>
-
-    <script src="./js/script.js"></script>
-
 </body>
 
 </html>
