--- a/promociones.html
+++ b/promociones.html
@@ -7,11 +7,17 @@
     <title>PROMOCIONES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/promociones.css">
+    <link rel="stylesheet" href="./css/productos.css">
+    <script src="./js/productos.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/cartService.js" defer></script>
+
+
+
 </head>
 
 <body>
 
-    <script src="./js/script.js"></script>
     <header class="header">
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
@@ -31,7 +37,12 @@
             </ul>
             <ul class="menu-derecha">
                 <li><button class="reserva">RESERVA ONLINE</button></li>
-                <li><button class="ordenar">MI ORDEN</button></li>
+                <li>
+                    <a href="ordenar.html" class="nav-link">
+                        <button class="ordenar">MI ORDEN</button>
+                        <span id="cuenta-carrito">0</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -45,140 +56,14 @@
         </div>
     </section>
 
-    <section class="promos-section">
-        <div class="container">
-            <!-- Promociones -->
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Mega Familiar" />
-                <div class="promo-content">
-                    <p class="promo-titulo">MEGA FAMILIAR <span class="promo-precio">S/.86.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        1/2 pollo solo.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
 
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Combo Familiar" />
-                <div class="promo-content">
-                    <p class="promo-titulo">COMBO FAMILIAR <span class="promo-precio">S/.76.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        1/4 pollo solo.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
+    <main>
+        <section id="productos-container"></section>
 
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Pollo + Chaufa" />
-                <div class="promo-content">
-                    <p class="promo-titulo">POLLO + CHAUFA <span class="promo-precio">S/.83.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        1 porcion de arroz chaufa de pollo a la leña.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
+    </main>
 
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Refrescante Especial" />
-                <div class="promo-content">
-                    <p class="promo-titulo">REFRESCANTE ESPECIAL <span class="promo-precio">S/.86.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        1 gaseosa de 1 1/2 Lt + 1/4 de pollo solo.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
 
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Refrescante" />
-                <div class="promo-content">
-                    <p class="promo-titulo">REFRESCANTE <span class="promo-precio">S/.76.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        1 gaseosa de 1 1/2 Lt.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
 
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Para dos personas" />
-                <div class="promo-content">
-                    <p class="promo-titulo">PARA DOS PERSONAS <span class="promo-precio">S/.45.00</span></p>
-                    <p class="promo-description">1 Pollo a la leña + crocantes papas fritas + 1 ensalada clásica +
-                        2 gaseosas de 450 ml o 2 vasos de chicha.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Combo Cascadas" />
-                <div class="promo-content">
-                    <p class="promo-titulo">COMBO CASCADAS <span class="promo-precio">S/.36.00</span></p>
-                    <p class="promo-description">1/4 Pollo a la leña + 1 palito de anticucho + 1 chorizo + 
-                        crocantes papas fritas + ensalada clásica + 1 gaseosa de 450 ml.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Combo para mi" />
-                <div class="promo-content">
-                    <p class="promo-titulo">COMBO PARA MI  <span class="promo-precio">S/.23.50</span></p>
-                    <p class="promo-description">1/4 Pollo a la leña + crocantes papas fritas + ensalada clásica +
-                        1  gaseosa de 450 ml.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Duo extremo" />
-                    <div class=" promo-content">
-                <p class="promo-titulo">DÚO EXTREMO<span class="promo-precio">S/.24.00</span></p>
-                <p class="promo-description">1/4 Pollo a la leña + crocantes papas fritas + arroz chaufa +
-                    ensalada clásica.</p>
-                <div class="promo-actions">
-                    <a href="#">Ver términos y condiciones</a>
-                    <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                </div>
-            </article>
-
-            <article class="promo-card">
-                <img src="./img/megafamiiar.jpg" alt="Dúo cascada" />
-                <div class="promo-content">
-                    <p class="promo-titulo">ÚO CASCADA <span class="promo-precio">S/.22.00</span></p>
-                    <p class="promo-description">1/8  Pollo a la leña + crocantes papas fritas +arroz chaufa +
-                        ensalada clásica.</p>
-                    <div class="promo-actions">
-                        <a href="#">Ver términos y condiciones</a>
-                        <button><span>ORDENAR</span><i class="fas fa-shopping-bag"></i></button>
-                    </div>
-                </div>
-            </article>
-
-        </div>
-    </section>
 
     <footer>
         <div class="footer-top">
@@ -188,9 +73,12 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
-                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
-                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i
+                            class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram"
+                            style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"
+                            style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
