--- a/ordenar.html
+++ b/ordenar.html
@@ -36,7 +36,22 @@
         </nav>
     </header>
 
-
+ <section class="bienvenida" id="bienvenidas">
+        <div class="bienvenida-contenedor">
+            <div class="bienvenida-texto izquierda">
+                <h2>BIENVENIDOS A <br><span>“LAS CASCADAS DE VILLA”</span></h2>
+                <a href="nosotros.html" class="btn-amarillo">QUIENES SOMOS</a>
+            </div>
+            <div class="bienvenida-texto derecha">
+                <p>
+                    Nos especializamos en ofrecer lo mejor de la comida peruana tradicional,
+                    con un enfoque especial en nuestro delicioso pollo a la brasa.
+                    Somos una pollería y restaurante familiar que combina sabor casero,
+                    atención cálida y un entorno acogedor para compartir en buena compañía.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -49,9 +64,12 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
-                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
-                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i
+                            class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram"
+                            style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"
+                            style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
@@ -93,6 +111,7 @@
             ©Las Cascadas de Villa. Todos los derechos reservados 2025
         </div>
     </footer>
-</body>
+
+     </body>
 
 </html>
