--- a/ordenar.html
+++ b/ordenar.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROMOCIONES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/promociones.css">
+    <link rel="stylesheet" href="./css/productos.css">
+    <link rel="stylesheet" href="./css/cart.css">
+    <script src="./js/productos.js"></script>
+    <script src="./js/cart.js" defer></script>
+    <script src="./js/cartService.js" defer></script>
+
+
+
 </head>
 
 <body>
 
-    <script src="./js/productos.js"></script>
     <header class="header">
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
@@ -31,12 +37,30 @@
             </ul>
             <ul class="menu-derecha">
                 <li><button class="reserva">RESERVA ONLINE</button></li>
-                <li><button class="ordenar">MI ORDEN</button></li>
+                <li>
+                    <a href="ordenar.html" class="nav-link">
+                        <button class="ordenar">MI ORDEN</button>
+                        <span id="cuenta-carrito">0</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
 
 
+
+
+
+    <main>
+        <p id="carrito-vacio">No hay productos. <a href="promociones.html">Agregar</a></p>
+        <section id="productos-container"></section>
+        <section id="totales">
+            <p>Total de productos: <span id="unidades">0</span></p>
+            <p>Precio Total: <span id="precio">0</span></p>
+            <button disabled>Comprar</button>
+            <button id="reinicar-carrito">Limpiar Carrito</button>
+        </section>
+    </main>
 
 
 
@@ -49,9 +73,12 @@
             <div class="right-top">
                 <p>SÍGUENOS EN:</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
-                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
-                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"  style="color: #ffffff;"></i></a>
+                    <a href="https://www.facebook.com/Lascascadasdevilla" target="_blank"><i
+                            class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+                    <a href="https://www.instagram.com/lascascadasdevilla/" target="_blank"><i class="fab fa-instagram"
+                            style="color: #ffffff;"></i></a>
+                    <a href="https://www.tiktok.com/@lascascadasdevillaofic" target="_blank"><i class="fab fa-tiktok"
+                            style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
