--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
         <a href="index.html">
             <img src="./img/Logo.png" alt="Logo Las Cascadas de Villa" class="logo">
         </a>
-        <!-- Botón hamburguesaaaa -->
+        <!-- Botón hamburguesa -->
         <div class="menu-toggle" id="menu-toggle">
             <span></span>
             <span></span>
