--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="footer-bottom">
-            <div class="footer-column" href="bienvenidas">
+            <div class="footer-column">
                 <h4>NOSOTROS</h4>
                 <ul>
                     <li>Visión</li>
