update cart.js and ordenar.html

--- a/ordenar.html
+++ b/ordenar.html
@@ -54,7 +54,7 @@
             <p>Total de productos: <span id="unidades">0</span></p>
             <p>Precio Total: <span id="precio">0</span></p>
             <button disabled>Comprar</button>
-            <button id="reinicar-carrito">Limpiar Carrito</button>
+            <button id="reiniciar">Limpiar Carrito</button>
         </section>
     </main>
 
