--- a/reservar.html
+++ b/reservar.html
@@ -10,10 +10,11 @@
 
 <body>
 
+
+  <!--No mostrar reserva por el momento
   <main class="container">
     <h1>Reserva tu experiencia</h1>
 
-    <!-- Paso 1: Preferencia de Servicio -->
     <section class="step">
       <h2>1. Elige el tipo de servicio</h2>
       <div class="options">
@@ -22,7 +23,7 @@
       </div>
     </section>
 
-    <!-- Paso 2: Selección de horario -->
+ 
     <section class="step">
       <h2>2. Selecciona tu horario</h2>
       <div class="date-navigation">
@@ -31,11 +32,11 @@
         <button onclick="cambiarDia(1)">Día siguiente →</button>
       </div>
       <div class="horarios" id="horarios">
-        <!-- Horarios dinámicos -->
+
       </div>
     </section>
 
-    <!-- Paso 3: Formulario de Registro -->
+
     <section class="step">
       <h2>3. Datos del cliente</h2>
       <form id="reservaForm">
@@ -64,6 +65,8 @@
       </form>
     </section>
   </main>
+
+  -->
   <script src="./js/script.js"></script>
 
 
