--- a/ordenar.html
+++ b/ordenar.html
@@ -53,8 +53,8 @@
         <section id="totales">
             <p>Total de productos: <span id="unidades">0</span></p>
             <p>Precio Total: <span id="precio">0</span></p>
-            <button disabled>Comprar</button>
-            <button id="reiniciar">Limpiar Carrito</button>
+            <button id="comprar">Comprar</button>
+            <button id="reiniciar-carrito">Limpiar Carrito</button>
         </section>
     </main>
 
