update 5 files update productos.js

--- a/ordenar.html
+++ b/ordenar.html
@@ -52,7 +52,7 @@
         <section id="productos-container"></section>
         <section id="totales">
             <p>Total de productos: <span id="unidades">0</span></p>
-            <p>Precio Total: <span id="precio">0</span></p>
+            <p>Precio Total: S/ <span id="precio">0</span></p>
             <button id="comprar">Comprar</button>
             <button id="reiniciar-carrito">Limpiar Carrito</button>
         </section>
