--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" />
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/productos.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/cartService.js" defer></script>
 </head>
 
 <body>
@@ -22,7 +25,7 @@
             <span></span>
             <span></span>
             <span></span>
-        </div> 
+        </div>
         <!--cod del menu-->
         <nav id="menu">
             <ul class="menu-izquierda">
