--- a/carta.html
+++ b/carta.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/carta.css">
+    <script src="./js/productos.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/cartService.js" defer></script>
+
 </head>
 
 <body>
