--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,9 @@
     <title> SOBRE NOSOTROS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/nosotros.css">
+    <script src="./js/productos.js"></script>
+    <script src="./js/main.js" defer></script>
+    <script src="./js/cartService.js" defer></script>
 </head>
 
 <body>
