--- a/nosotros.html
+++ b/nosotros.html
@@ -62,7 +62,7 @@
                 <img src="./img/mision.jpeg" alt="Interior restaurante - misión">
             </div>
             <div class="text-content">
-                <h2>MISIÓN</h2>
+                <h2 id="mision">MISIÓN</h2>
                 <span class="underline"></span>
                 <p>
                     “Brindar a nuestros clientes una experiencia gastronómica única, basada en la autenticidad de la
@@ -77,7 +77,7 @@
     <section class="mision-vision">
         <div class="content">
             <div class="text-content">
-                <h2>VISIÓN</h2>
+                <h2 id="vision">VISIÓN</h2>
                 <span class="underline"></span>
                 <p>
                     “Convertirnos en uno de los restaurantes más reconocidos de Lima Sur destacando por nuestra
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class="section">
+    <section id="valores" class="section">
         <h2>NUESTROS VALORES</h2>
         <div class="valores-container">
             <div class="valor active" id="valores-1">
@@ -152,24 +152,30 @@
             <div class="footer-column">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li>Visión</li>
-                    <li>Misión</li>
-                    <li>Valores</li>
+                    <a href="nosotros.html#mision">
+                        <li>Misión</li>
+                    </a>
+                    <a href="nosotros.html#vision">
+                        <li>Visión</li>
+                    </a>
+                    <a href="nosotros.html#valores">
+                        <li>Valores</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>SERVICIOS</h4>
                 <ul>
-                    <li>Nuestra carta</li>
-                    <li>Promociones</li>
-                    <li>Reserva online</li>
-                    <li>Ordena aquí</li>
+                    <a href="carta.html"><li>Nuestra Carta</li></a>
+                    <a href="promociones.html"><li>Promociones</li></a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>CONTACTANOS</h4>
                 <ul>
-                    <li>Locales</li>
+                    <a href="index.html#local">
+                        <li>Local</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
