--- a/promociones.html
+++ b/promociones.html
@@ -87,24 +87,34 @@
             <div class="footer-column">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li>Visión</li>
-                    <li>Misión</li>
-                    <li>Valores</li>
+                    <a href="nosotros.html#mision">
+                        <li>Misión</li>
+                    </a>
+                    <a href="nosotros.html#vision">
+                        <li>Visión</li>
+                    </a>
+                    <a href="nosotros.html#valores">
+                        <li>Valores</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>SERVICIOS</h4>
                 <ul>
-                    <li>Nuestra carta</li>
-                    <li>Promociones</li>
-                    <li>Reserva online</li>
-                    <li>Ordena aquí</li>
+                    <a href="carta.html">
+                        <li>Nuestra Carta</li>
+                    </a>
+                    <a href="promociones.html">
+                        <li>Promociones</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>CONTACTANOS</h4>
                 <ul>
-                    <li>Locales</li>
+                    <a href="index.html#local">
+                        <li>Local</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
