--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="locales-section">
         <div class="locales-header">
-            <h2><span class="label-local">LOCALES</span> <img src="./img/Logo.png" alt="Logo" /></h2>
+            <h2><span class="label-local" id="local">LOCALES</span> <img src="./img/Logo.png" alt="Logo" /></h2>
         </div>
 
         <div class="locales-container">
@@ -174,24 +174,30 @@
             <div class="footer-column">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li>Visión</li>
-                    <li>Misión</li>
-                    <li>Valores</li>
+                    <a href="nosotros.html#mision">
+                        <li>Misión</li>
+                    </a>
+                    <a href="nosotros.html#vision">
+                        <li>Visión</li>
+                    </a>
+                    <a href="nosotros.html#valores">
+                        <li>Valores</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>SERVICIOS</h4>
                 <ul>
-                    <li>Nuestra carta</li>
-                    <li>Promociones</li>
-                    <li>Reserva online</li>
-                    <li>Ordena aquí</li>
+                    <a href="carta.html"><li>Nuestra Carta</li></a>
+                    <a href="promociones.html"><li>Promociones</li></a>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>CONTACTANOS</h4>
                 <ul>
-                    <li>Locales</li>
+                    <a href="index.html#local">
+                        <li>Local</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-column">
