--- a/index.html
+++ b/index.html
@@ -174,15 +174,9 @@
             <div class="footer-column">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <a href="nosotros.html#mision">
-                        <li>Misión</li>
-                    </a>
-                    <a href="nosotros.html#vision">
-                        <li>Visión</li>
-                    </a>
-                    <a href="nosotros.html#valores">
-                        <li>Valores</li>
-                    </a>
+                    <a href="nosotros.html#mision"><li>Misión</li></a>
+                    <a href="nosotros.html#vision"><li>Visión</li></a>
+                    <a href="nosotros.html#valores"><li>Valores</li></a>
                 </ul>
             </div>
             <div class="footer-column">
@@ -195,9 +189,7 @@
             <div class="footer-column">
                 <h4>CONTACTANOS</h4>
                 <ul>
-                    <a href="index.html#local">
-                        <li>Local</li>
-                    </a>
+                    <a href="index.html#local"><li>Local</li></a>
                 </ul>
             </div>
             <div class="footer-column">
